Remove google fonts

--- a/src/assets/scss/settings/base/_typography.scss
+++ b/src/assets/scss/settings/base/_typography.scss
@@ -1,13 +1,10 @@
 // Typography
 
-$font--provider:    'Google Fonts';
-$font--import:      'Inter:400,500,600,700,800';
-
 // The font set
 $font--family: (
 	heading: 	null,
-	base:		'"Inter", sans-serif',
-	code: 		'Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace',
+	base:		'"Helvetica", sans-serif',
+	code: 		'monospace',
 	pre: 		'"Courier 10 Pitch", Courier, monospace'
 );
 
