--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -166,7 +166,7 @@ body {
   grid-gap: 22px;
   grid-auto-flow: column;
   position: absolute;
-  // bottom: 25px;
+  //bottom: 25px;
   bottom: -65px;
   background: $button-background;
   border-radius: 8px;
@@ -225,7 +225,7 @@ body {
     transform: scale(1);
   } 
   50% {
-    transform: scale(1.5);
+    transform: scale(1.3);
   }
   100% {
     transform: scale(1);
@@ -266,6 +266,13 @@ body {
 .side-message-body {
   background: #272c47 !important;
   border-radius: 0 10px 10px 10px;
+}
+
+.button-hover {
+  display: block;
+  &.hide {
+    display: none;
+  }
 }
 
 
