--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -22,6 +22,10 @@ $font-color: #bfbebe;
 body {
   margin: 0 !important;
   padding: 0 !important;
+  height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  min-height: -moz-fill-available;
 }
 
 :root {
