--- a/src/assets/scss/custom/room.scss
+++ b/src/assets/scss/custom/room.scss
@@ -26,6 +26,7 @@ body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
   min-height: -moz-fill-available;
+  min-height: stretch;
 }
 
 :root {
