--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -3,10 +3,14 @@
 }
 
 .is-relative {
-  height: 50vh;
-  width: 70vh;
   background: black;
   border-radius: 20px;
+  width: 50vw;
+  max-width: 124.46vh;
+  /* 16/9 = 1.778 */
+  height: 32.37vw;
+  /* height:width ratio = 9/16 = .5625  */
+  max-height: 70vh;
   .self-video {
     height: 100% !important;
     width: 100% !important;
@@ -42,8 +46,11 @@
   &.room-entry {
     display: flex;
     justify-content: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
     .room-entry-container {
       //display: inline-flex;
+      width: 90vw;
       border-radius: 10px;
       box-shadow: 0px 8px 16px 7px rgba(0, 0, 0, 0.6);
       background-color: #1d2134 !important;
@@ -52,7 +59,7 @@
         .room-entry-form {
           display: flex;
           flex-direction: column;
-          margin-left: 40px;
+          margin-left: 70px;
           flex-grow: 1;
           justify-content: center;
           align-items: center;
