--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -2,6 +2,17 @@
   box-sizing: border-box;
 }
 
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 .is-relative {
   background: black;
@@ -20,11 +31,8 @@
   }
   .button-wrapper {
     background: transparent;
-    padding: 7px;
-
-    &.video-off {
-      background: #181a26;
-    }
+    padding: 10px;
+    grid-gap: 25px;
   }
 
   .overlay-message {
@@ -41,14 +49,25 @@
     flex-direction: column;
     border-radius: 20px;
   }
+  .cntrl-button {
+    &.room-entry-button {
+      &.isOff {
+        .cntrl-button-wrap {
+          background: #f26b4c;
+        }
+      }
+      .cntrl-button-wrap {
+        background: transparent;
+        border: 1px solid white;
+      }
+    }
+  }
 }
 
 .section {
   &.room-entry {
     display: flex;
     justify-content: center;
-    //padding-top: 100px;
-    //padding-bottom: 100px;
     .room-entry-container {
       //display: inline-flex;
       width: 90vw;
@@ -60,8 +79,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        //height: calc(100vh-10px);
-        //height: 80vh;
         .room-entry-form {
           display: flex;
           flex-direction: column;
@@ -69,7 +86,6 @@
           flex-grow: 1;
           justify-content: center;
           align-items: center;
-
           .input-area {
             position: relative;
             width: 80%;
@@ -114,6 +130,26 @@
               background: #583796;
               margin-left: auto;
             }
+          }
+        }
+        .waiting-message-area {
+          display: flex;
+          flex-direction: column;
+          margin-left: 70px;
+          flex-grow: 1;
+          justify-content: center;
+          align-items: center;
+          .loader {
+            border: 4px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 2px solid black;
+            width: 50px;
+            height: 50px;
+            -webkit-animation: spin 1.5s linear infinite; /* Safari */
+            animation: spin 1.5s linear infinite;
+          }
+          h6 {
+            text-align: center;
           }
         }
       }
