Change color of cancel button

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -158,7 +158,7 @@
               }
             }
             .cancel-button {
-              background: #583796;
+              background: #af414a;
               margin-left: auto;
             }
           }
