--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -112,7 +112,7 @@
           margin-left: 70px;
           @media only screen and (max-width: 925px) {
             margin-left: 0;
-            margin-top: 70px;
+            margin-top: 50px;
             width: 80%;
           }
           flex-grow: 1;
@@ -174,6 +174,11 @@
           display: flex;
           flex-direction: column;
           margin-left: 70px;
+          @media only screen and (max-width: 925px) {
+            margin-left: 0;
+            margin-top: 50px;
+            width: 80%;
+          }
           flex-grow: 1;
           justify-content: center;
           align-items: center;
