--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -347,3 +347,123 @@
 		  height: 150px;
 	  }
   }
+
+@-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+.container.user-rooms {
+	padding: 0 !important;
+	margin: 0 !important;
+	max-width: 100% !important;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	h2 {
+		text-align: center;
+	}
+	h6 {
+		text-align: center;
+		margin-bottom: 0;
+	}
+	p {
+		text-align: center;
+		font-size: x-small;
+	}
+	.rooms {
+		width: 80%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		margin-top: 40px;
+		.add-room-loader {
+			border: 4px solid #f3f3f3;
+			border-radius: 50%;
+			border-top: 2px solid black;
+			width: 50px;
+			height: 50px;
+			-webkit-animation: spin 1.5s linear infinite; /* Safari */
+			animation: spin 1.5s linear infinite;
+		}
+		.card {
+			width: 100%;
+			box-shadow: 0px 8px 16px 7px rgba(0, 0, 0, 0.6);
+			background-color: #1d2134 !important;
+			opacity: 0.87;
+			&:hover {
+				opacity: 1;
+				box-shadow: 0px 9px 16px 10px rgba(0, 0, 0, 0.8);
+			}
+			.goto-room-button {
+				border-radius: 5px;
+				box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
+				opacity: 0.9;
+				&:hover {
+					opacity: 1;
+				}
+			}
+			.delete-room-button {
+				border-radius: 5px;
+				box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
+				opacity: 0.9;
+				&:hover {
+					opacity: 1;
+				}
+			}
+			.room-lock-toggle {
+				min-width: 150px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				.toggle-lock-loader {
+					border: 2px solid #f3f3f3;
+					border-radius: 50%;
+					border-top: 1px solid black;
+					width: 20px;
+					height: 20px;
+					-webkit-animation: spin 1.5s linear infinite; /* Safari */
+					animation: spin 1.5s linear infinite;
+				}
+			}
+		}
+		p {
+			font-size: small;
+		}
+	}
+	.input-area {
+		width: 80%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		.form-input {
+			border-radius: 7px;
+			//flex-grow: 1;
+			width: 80%;
+			&::placeholder {
+				color: #3f475f;
+			}
+		}
+		.add-room-button {
+			background: #6b6dff;
+			box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
+			border-radius: 5px;
+			margin: 20px 0;
+			margin-left: 5%;
+			&:hover {
+				box-shadow: 4px 4px 16px 4px rgba(0, 0, 0, 0.7);
+			}
+			opacity: 0.9;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+}
