Change red color

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -162,7 +162,7 @@
               }
             }
             .cancel-button {
-              background: #d24646;
+              background: #C91F37;
               margin-left: auto;
             }
             .join-button {
