Add maximum room limit error notification

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -366,6 +366,9 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	.rooms-error {
+		position: fixed;
+	}
 	h2 {
 		text-align: center;
 	}
