Fix: roomName in add room

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
-  font-family: 'Roboto',arial,sans-serif !important;
+  //font-family: 'Roboto',arial,sans-serif !important;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @-webkit-keyframes spin {
