--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -375,6 +375,74 @@
 	  }
   }
 
+.hero-content {
+	.reveal-from-bottom {
+		&.heading {
+			width: 800px;
+			font-size: 80px;
+			font-weight: bold;
+			letter-spacing: -2.18px;
+			line-height: 80px;
+			text-align: center;
+			padding: 0px;
+			margin: 12px auto 0px;
+			@media only screen and (max-width: 900px) {
+				width: 582px;
+			}
+			@media only screen and (max-width: 768px) {
+				width: 400px;
+				font-size: 60px;
+			}
+			@media only screen and (max-width: 500px) {
+				width: 300px;
+				font-size: 50px;
+			}
+		}
+		&.para-description {
+			width: 600px;
+			padding: 0px;
+			text-align: center;
+			font-size: 20px;
+			line-height: 25px;
+			margin: 30px auto auto;
+			font-weight: normal;
+			@media only screen and (max-width: 900px) {
+				width: 422px;
+			}
+			@media only screen and (max-width: 768px) {
+				width: 300px;
+				font-size: 15px;
+			}
+			@media only screen and (max-width: 500px) {
+				width: 200px;
+				font-size: 14px;
+			}
+		}
+		&.login-buttons {
+			margin-top: 40px;
+			.button-group {
+				.button {
+					border-radius: 5px;
+					min-height: 60px;
+					text-align: center;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
+					opacity: 0.9;
+					&:hover {
+						opacity: 1;
+						box-shadow: 3px 3px 16px 7px rgba(0, 0, 0, 0.7);
+					}
+					&.button-dark {
+						background: #2a3152 !important
+					}
+				}
+			}
+		}
+	}
+}
+
 @-webkit-keyframes spin {
 	0% { -webkit-transform: rotate(0deg); }
 	100% { -webkit-transform: rotate(360deg); }
