--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -102,9 +102,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0.5rem 1rem 0.5rem 0.5rem;
+        padding: 1rem;
         @media only screen and (max-width: 925px) {
-          padding: 0.6rem 0.3rem 1.5rem 0.3rem;
+          padding: 0.6rem 0.5rem 1.5rem 0.5rem;
           flex-direction: column;
         }
         .room-entry-form {
