--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -375,6 +375,24 @@
 	  }
   }
 
+.testimonial-inner {
+	.tiles-wrap {
+		.tiles-item {
+			.tiles-item-inner {
+				background: #1d2134 !important;
+				box-shadow: 0 8px 16px 7px rgba(0,0,0,.6);
+				opacity: 0.9;
+				&:hover {
+					opacity: 1;
+					box-shadow: 0 9px 16px 10px rgba(0,0,0,.8);
+					transform: translate3d(0, 20px, 0);
+					transition: transform 0.4s ease-out;
+				}
+			}
+		}
+	}
+}
+
 .site-header-inner {
 	position: relative;
 	.brand {
