--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -382,6 +382,8 @@
 				background: #1d2134 !important;
 				box-shadow: 0 8px 16px 7px rgba(0,0,0,.6);
 				opacity: 0.9;
+				transform: translate3d(0, 0, 0);
+				transition: transform 0.4s ease-out;
 				&:hover {
 					opacity: 1;
 					box-shadow: 0 9px 16px 10px rgba(0,0,0,.8);
