--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -709,6 +709,14 @@
 .split-item-image {
 	min-width: 50% !important;
 	box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
+	transform: translate3d(0, 0, 0);
+	transition: transform 0.4s ease-out;
+	&:hover {
+		opacity: 1;
+		box-shadow: 0 9px 16px 10px rgba(0,0,0,.8);
+		transform: translate3d(0, 20px, 0);
+		transition: transform 0.4s ease-out;
+	}
 	&.room-entry-image {
 		min-width: 70%;
 	}
