Add mobile view image

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -834,6 +834,15 @@
 	}
 }
 
+.mobile-view-image{
+	height: 300px !important;
+	width: 150px !important;
+}
+.mobile-view-container{
+	min-width: 150px !important;
+	width:150px !important;
+}
+
 .login-container {
 	width: 100%;
 	height: 60vh;
