Fix: some padding in delete room modal

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1152,7 +1152,7 @@
 }
 
 .room-delete-modal {
-	&.modal-content {
+	.modal-content {
 		padding-top: 0 !important;
 		padding-bottom: 40px;
 		.delete-modal-buttons {
