Add form in add room input

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -574,6 +574,11 @@
 				//margin-top: 20px;
 				//top: 20%;
 			}
+			.input-area-form {
+				width: 100%;
+				display: flex;
+				align-items: center;
+			}
 			.input-label {
 				position: absolute;
 				top: -5%;
