--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -61,6 +61,12 @@
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
+    &.no-media {
+      background-color: rgba(191, 48, 48, 0.9);
+      p {
+        margin: 0 auto !important;
+      }
+    }
   }
   .cntrl-button {
     &.room-entry-button {
