Add margin in room entry conatiner

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -88,6 +88,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10%;
     .room-entry-container {
       //display: inline-flex;
       width: 90vw;
