Add loader on join button till ice success and media success

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -157,6 +157,29 @@
             align-items: center;
             width: 80%;
             margin-top: 12%;
+            .loader-button {
+              max-width: 45%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+              .loader {
+                border: 2px solid #f3f3f3;
+                border-radius: 50%;
+                border-top: 1px solid black;
+                width: 17px;
+                height: 17px;
+                -webkit-animation: spin 1.5s linear infinite; /* Safari */
+                animation: spin 1.5s linear infinite;
+              }
+              p {
+                font-size: x-small;
+                padding: 0 !important;
+                text-align: center;
+                margin: 0 !important;
+                color: white;
+              }
+            }
             button {
               border-radius: 10px;
               max-width: 45%;
